# bridge-config

./: .flake8  .gitignore  README.md  README.rst  pyproject.toml  setup.py
bridge_config.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bridgeconfig/: __init__.py  bridgeconfig.py  cli.py  conf.py
tests/: settings.toml  test_bridgeconfig.py
